# DyNode

./: .clangd  .editorconfig  .gitattributes  .gitignore  CHANGELOG  CMakeLists.txt  CMakePresets.json  CREDITS  DyCore.cpp  DyCore.h  DyCore.sln  DyCore.vcxproj  DyCore.vcxproj.filters  DyNode.resource_order  DyNode.yyp  LICENSE  README.md  cpp.hint  delaunator.cpp  delaunator_ho.hpp  pch.h  pre_project_step.bat  pugixml.cpp  test_DyCore.cpp
.github/workflows/: build.yml  codeql.yml  update.yml
DyCore/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_sentry.bat  build_upload_pdb.bat
DyCore/docs/: API_KEY_IMPLEMENTATION.md
DyCore/docs/en/: API_KEY_IMPLEMENTATION.md
DyCore/lib/: cubinterpp_header.hpp  delaunator.cpp
DyCore/lib/mdspan/: mdspan.hpp
DyCore/lib/zstd/: zdict.h
DyCore/res/: DyCore.manifest  resource.h  resource.rc
DyCore/src/: DyCore.cpp  DyCore.h  analytics.cpp  analytics.h  compress.cpp  compress.h  config.h.in  delaunator.cpp  gm.cpp  gm.h  update.cpp  update.h  version.h.in  window.cpp  window.h  windowAPI.cpp
DyCore/src/audio/: audio.cpp  audio.h
DyCore/src/extension/: extension.cpp  luaext.h
DyCore/src/note/: activation.cpp  activation.h  note.cpp  note.h  noteAPI.cpp  notePoolManager.cpp  notePoolManager.h  noteStat.cpp  noteUtils.cpp
DyCore/src/project/: project.cpp  project.h  projectAPI.cpp  projectManager.cpp  projectManager.h
DyCore/src/project/format/: dy.cpp  dy.h  dymImportCommon.h  dyn.cpp  dyn.h  import_common.h  xml.cpp  xml.h
DyCore/src/render/: layout.h  render.cpp  render.h  renderAPI.cpp  vertex.cpp  vertex.h
DyCore/src/timing/: timing.cpp  timing.h  timingAPI.cpp
DyCore/src/utils/: bitio.h  curve.cpp  curve.h  dlgbox.cpp  dlgbox.h  dlgboxAPI.cpp  profile.h  timer.h  tools.cpp  tools.h  utils.cpp  utils.h  utilsAPI.cpp
DyCore/src/utils/ffmpeg/: API.cpp  base.cpp  record.cpp  record.h
DyCore/src/video/: decoder.cpp  decoder.h  videoAPI.cpp
DyCore/tests/: gm_ctest.cpp  lua_ctest.cpp  note_index_ctest.cpp  old_xml_import_ctest.cpp  project_backup_ctest.cpp  timing_ctest.cpp  utils_ctest.cpp
animcurves/acBackIn/: acBackIn.yy
animcurves/acBackInOut/: acBackInOut.yy
animcurves/acBackOut/: acBackOut.yy
animcurves/acBounceIn/: acBounceIn.yy
animcurves/acBounceInOut/: acBounceInOut.yy
animcurves/acBounceOut/: acBounceOut.yy
animcurves/acCircIn/: acCircIn.yy
animcurves/acCircInOut/: acCircInOut.yy
animcurves/acCircOut/: acCircOut.yy
animcurves/acCubicIn/: acCubicIn.yy
animcurves/acCubicInOut/: acCubicInOut.yy
animcurves/acCubicOut/: acCubicOut.yy
animcurves/acEaseIn/: acEaseIn.yy
animcurves/acEaseInOut/: acEaseInOut.yy
animcurves/acEaseOut/: acEaseOut.yy
animcurves/acElasticIn/: acElasticIn.yy
animcurves/acElasticInOut/: acElasticInOut.yy
animcurves/acElasticOut/: acElasticOut.yy
animcurves/acExpoIn/: acExpoIn.yy
animcurves/acExpoInOut/: acExpoInOut.yy
animcurves/acExpoOut/: acExpoOut.yy
animcurves/acFastToSlow/: acFastToSlow.yy
animcurves/acLinear/: acLinear.yy
animcurves/acMidSlow/: acMidSlow.yy
animcurves/acQuartIn/: acQuartIn.yy
animcurves/acQuartInOut/: acQuartInOut.yy
animcurves/acQuartOut/: acQuartOut.yy
datafiles/: credits_license.txt  mOrbitron.json  mSpaceMono.json  sprMsdfNotoSans.json
datafiles/lang/: en-US.json  ja-JP.json  zh-TW.json  zh-cn.json
deploy/: deploy.py  pre_deploy.py
extensions/DyCore/: DyCore.yy
extensions/FMODGMS/: fmodgms.yy
extensions/libdlgmod/: libdlgmod.yy
extensions/window_command_hook/: window_command_hook.yy
fonts/fMono10/: fMono10.old.yy  fMono10.yy  fMono12.old.yy  fMono8.old.yy  fmono16.old.yy
fonts/fMono16N/: fMono16N.old.yy  fMono16N.yy
fonts/fdynamix16/: fdynamix16.yy
fonts/fdynamix20/: fdynamix20.yy
fonts/fdynamix48/: fdynamix48.yy
fonts/fmono16/: fmono16.old.yy  fmono16.yy
fonts/forbitron48/: forbitron48.yy
fonts/scribble_fallback_font/: scribble_fallback_font.yy
lib/: delaunator.hpp  json.hpp
lib/sol/: sol.hpp
notes/Scoreboard layout/: Scoreboard layout.yy
notes/__SnitchNativeMacros/: __SnitchNativeMacros.yy
notes/compatibility_report_020622_120925925/: compatibility_report_020622_120925925.yy
notes/compatibility_report_300522_2019551955/: compatibility_report_300522_2019551955.yy
notes/compatibility_report_300522_2124542454/: compatibility_report_300522_2124542454.yy
objects/__SnitchController/: __SnitchController.yy
objects/__obj_Aptabase_daemon/: __obj_Aptabase_daemon.yy
objects/objAnnouncement/: Create_0.gml  Draw_75.gml  Step_0.gml  objAnnouncement.yy
objects/objConsole/: Create_0.gml  Draw_75.gml  Step_0.gml  objConsole.yy
objects/objCredits/: CleanUp_0.gml  Create_0.gml  Draw_64.gml  Step_0.gml  objCredits.yy
objects/objPreInit/: Create_0.gml  Draw_64.gml  Step_0.gml  objPreInit.yy
objects/objScoreBoard/: Create_0.gml  Draw_0.gml  Step_0.gml
objects/objTextBox/: Create_0.gml  objTextBox.yy
objects/objTopBar/: Step_0.gml
objects/objTriangle/: Create_0.gml  Draw_0.gml  Other_4.gml  Step_0.gml  objTriangle.yy
objects/objUILangList/: Create_0.gml  objUILangList.yy
objects/objUpdateManager/: Create_0.gml  Draw_64.gml  Other_3.gml  Other_62.gml  objUpdateManager.yy
objects/objchain/: Create_0.gml
objects/objeditor/: Create_0.gml  Draw_0.gml  Step_0.gml  Step_1.gml  Step_2.gml
objects/objhold/: Create_0.gml  Draw_0.gml  Step_0.gml  objhold.yy
objects/objholdsub/: Create_0.gml  Step_0.gml
objects/objmain/: Create_0.gml  Draw_0.gml  Draw_64.gml  Draw_72.gml  Draw_73.gml  Other_70.gml  Other_72.gml  Step_0.gml  Step_1.gml  Step_2.gml
objects/objmanager/: Create_0.gml  Draw_64.gml  Draw_77.gml  Other_3.gml  Other_62.gml  Step_0.gml  Step_1.gml  objmanager.yy
objects/objnote/: CleanUp_0.gml  Create_0.gml  Destroy_0.gml  Draw_0.gml  Draw_73.gml  (+3 more)
postbuild/: main.py  manifest.xml
src/: DyCore.cpp  DyCore.h  api.h  async.cpp  async.h  compress.cpp  constants.h  delaunator.cpp  ds_wrapper.cpp  editor.cpp  gm.cpp  gm.h  note.cpp  note.h  project.cpp  project.h  singletons.cpp  singletons.h  test.cpp  update.cpp  utils.cpp  utils.h
(+259 files in other folders)
